--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Trigger Site Rebuild on a CRON Schedule
 
 on:
   schedule:
-    # Runs "at 13:00 UTC every day" (see https://crontab.guru)
-    - cron: '*/15 * * * *'
+    # Runs "at 02:35 UTC every day" (see https://crontab.guru)
+    - cron: '35 2 * * *'
 jobs:
   build:
     name: Trigger Site Rebuild
