--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Trigger Site Rebuild on a CRON Schedule
 
 on:
   schedule:
-    # Runs "at minute 40 every 6th hour" (see https://crontab.guru)
-    - cron: '40 */6 * * *'
+    # Runs "at 13:40 every day" (see https://crontab.guru)
+    - cron: '40 13 * * *'
 jobs:
   build:
     name: Trigger Site Rebuild
